[package]
name = "securefs"
version = "0.1.0"
edition = "2021"

[dependencies]
chacha20poly1305 = "0.10" # XChaCha20-Poly1305 AEAD
rand_core = "0.6"
zeroize = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"

[[bin]]
name = "securefs"
path = "main.rs"

[dev-dependencies]
tempfile = "3"

[lib]
path = "lib.rs"
